--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
 
   height: 100vh;
   width: 100vw;
@@ -29,6 +30,9 @@ header {
 h1 {
   z-index: 0;
   position: fixed;
+  text-align: center;
+
+  max-width: 80%;
 }
 
 main {
@@ -65,12 +69,6 @@ main {
   width: 100%;
 
   background-color: #f7d260;
-}
-
-@media only screen and (max-width: 1200px) {
-  .card-wrapper {
-    flex-direction: column;
-  }
 }
 
 .card {
@@ -139,4 +137,14 @@ font-size: 1.2rem;
   letter-spacing: 1.5px;
   line-height: 1.8;
   width: 90%;
+}
+
+@media only screen and (max-width: 1200px) {
+  .card-wrapper {
+    flex-direction: column;
+  }
+
+  .card {
+    width: 80vw;
+  }
 }
