--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html, body {
   padding: 0;
   margin: 0;
 
-  background-color: #7c49a6;
+  background-color: #392061;
 
   overflow-x: hidden;
 }
@@ -24,21 +24,29 @@ header {
   width: 100vw;
 
   color: white;
+
   background-color: #392061;
+  background-image: url('./pics/tarot-deck.jpeg');
+  background-size:cover;
+  background-position: fixed;
 }
 
 h1 {
   z-index: 0;
-  position: fixed;
   text-align: center;
+  position: absolute;
 
-  max-width: 80%;
+  background-color: rgba(0, 0, 0, 0.3);
+
+  padding: 40vh 25%;;
+  height: 100%;
+  width: 100%;
 }
 
 main {
   z-index: 5;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
@@ -51,24 +59,24 @@ main {
   background-color: #f7d260;
 }
 
-@media only screen and (max-width: 950px) {
-  main {
-    flex-direction: column;
-  }
-}
-
 .card-wrapper {
   z-index: 5;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
 
+  overflow-x: scroll;
+  scroll-snap-type: x proximity;
+
+  padding: 0 2rem;
   height: 100%;
   width: 100%;
 
   background-color: #f7d260;
+}
+
+.card-wrapper::-webkit-scrollbar {
+  display: none;
 }
 
 .card {
@@ -76,9 +84,10 @@ main {
   flex-direction: column;
   align-items: center;
 
-  min-height: 70vh;
+  min-height: 75vh;
   width: 30vw;
-  margin: 1rem 0.2rem;
+  padding: 0 1rem;
+  margin: 1rem 2rem;
 }
 
 .image {
@@ -97,7 +106,7 @@ main {
 }
 
 #btn {
-font-size: 1.2rem;
+  font-size: 1.2rem;
 
   max-width: 20rem;
   padding: 1rem 2rem;
@@ -116,6 +125,10 @@ font-size: 1.2rem;
   transform: scale(0.9);
 }
 
+.name {
+  text-align: center;
+}
+
 .image.reverse-image {
   -webkit-transform: scaleY(-1);
 }
@@ -129,22 +142,20 @@ font-size: 1.2rem;
 }
 
 .text.reverse-text:before {
-  content: 'the Absence or Negation of: ';
+  content: 'The Absence or Negation of: ';
 }
 
 .text {
   text-align: center;
   letter-spacing: 1.5px;
   line-height: 1.8;
-  width: 90%;
+  height: 20vh;
+  width: 100%;
 }
 
 @media only screen and (max-width: 1200px) {
-  .card-wrapper {
-    flex-direction: column;
-  }
-
   .card {
     width: 80vw;
+    scroll-snap-type: x proximity;
   }
 }
