--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 html, body {
   font-family: 'Raleway', sans-serif;
 
-
   padding: 0;
   margin: 0;
 
@@ -22,6 +21,8 @@ header {
 
   height: 100vh;
   width: 100vw;
+
+  overflow: hidden;
 
   color: white;
 
@@ -66,7 +67,7 @@ main {
   align-items: center;
 
   overflow-x: scroll;
-  scroll-snap-type: x proximity;
+  scroll-snap-type: x mandatory;
 
   padding: 0 2rem;
   height: 100%;
@@ -83,6 +84,9 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-self: center;
+
+  scroll-snap-align: center;
 
   min-height: 75vh;
   width: 30vw;
@@ -156,6 +160,5 @@ main {
 @media only screen and (max-width: 1200px) {
   .card {
     width: 80vw;
-    scroll-snap-type: x proximity;
   }
 }
